google calendar integrated with index. about page created and completed. course-catalog WIP

--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
 <head>
   <meta charset="utf-8">
   <title>Straight to the Point Archery</title>
+  <!--<link rel="stylesheet" type="text/css" href="styles/style.css">-->
 </head>
 
 <body>
   <header>
-    <img src="images/archeryAcademy-logo-color.png" alt="">
+    <a href="index.html"><img src="images/archeryAcademy-logo-color.png" alt="#"> </a>
     <!--Logo placeholder-->
-    <h1> Straight to the Point Archery</h1>
+    <h1>Straight to the Point Archery</h1>
     <address>
       <a href="https://goo.gl/maps/4qa4EtFzZhPi6Co88">528 Nock Point Ln <br>
-      Tacoma, WA 98412</a> <br>
+        Tacoma, WA 98412</a> <br>
       archery-education@example.com <br>
       (253)555-1010
     </address>
@@ -22,8 +23,8 @@
     <h2>
       <span>
         <a href="#">Reserve a Range</a>
-        <a href="#">Classes</a>
-        <a href="#">FAQ</a>
+        <a href="course-catalog.html">Classes</a>
+        <a href="about.html">FAQ</a>
       </span>
     </h2>
   </nav>
@@ -32,18 +33,17 @@
     <section class="classes-spotlight">
       <section class="classes-weekly">
         <h3>Current Class Schedule</h3>
-        <div class="classes-weekly-calendar">
-          <ul>
-            ~ weekly calendar here ~
-            <!-- a seven day calendar of class schedules. Google?-->
+        <iframe
+          src="https://calendar.google.com/calendar/embed?height=400&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=America%2FLos_Angeles&amp;src=bjY0am9ocDJwMDJpOTdhNzdzNGE1dWlwaGdAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;color=%23039BE5&amp;showTitle=0&amp;showNav=0&amp;showDate=0&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;showTz=0&amp;mode=AGENDA"
+          style="border-width:0" width="300" height="400" frameborder="0" scrolling="no"></iframe>
+        <!--<ul>
             <li>A101 Basic Archery <br>
               Mondays and Wednesdays, 4-5pm</li>
             <li>A102 Intermediate Archery <br>
               Tuesdays and Thursdays, 4-5pm</li>
             <li>A103 Advanced Archery <br>
               Tuesdays and Thursdays, 5-6pm</li>
-          </ul>
-        </div>
+          </ul>-->
       </section>
       <section class="classes-resigtration">
         <h3>Resigtration is now OPEN!</h3>
@@ -60,14 +60,28 @@
       </section>
     </section>
 
+    <section class="welcome">
+      <!--right side-->
+      <h3>Welcome!</h3>
+      <p>Whether it's your first time at our facility or your first time using a bow, we've got the tools and guidance you need! Lorem ipsum...<br><a href="about.html#about-us">learn more</a></p>
+      <h3>Education:</h3>
+      <p>From beginner to olympic athlete, our classes and one-on-one sessions are lead by level 1 and level 2 qualified instructors who meet the safety requirements of USA Archery (USAA). <br> <a href="about.html#education">learn more</a></p>
+      <h3>Facility:</h3>
+      <p>Our indoor training facility has 28 shooting lanes (14 – 10yd, 14 – 20yd), 2 private coaching rooms incorporating detailed technical video analysis, and an outdoor shooting field.<br> <a href="about.html#facility">learn more</a></p>
+    </section>
+
+    <!-- requires javascript...
     <section class="main-slideshow">
-      <!--slideshow under the type-->
       <p>~~Right side slideshow containing facility info, instructor bios, news, etc.~~</p>
     </section>
+  -->
+
   </main>
   <footer>
-    <img src="images/footerimage.jpg" alt="">    <!--footer image-->
-    <img src="images/archeryAcademy-logo-color.png" alt="">    <!--Logo placeholder-->
+    <img src="images/footerimage.jpg" alt="">
+    <!--footer image-->
+    <a href="index.html"><img src="images/archeryAcademy-logo-color.png" alt="#"></a>
+    <!--Logo placeholder-->
     <address>
       <a href="https://goo.gl/maps/4qa4EtFzZhPi6Co88">528 Nock Point Ln <br>
         Tacoma, WA 98412</a> <br>
