--- a/about.html
+++ b/about.html
@@ -22,9 +22,9 @@
   <nav>
     <h2>
       <span>
-        <a href="#">Reserve a Range</a>
+        <span>Reserve a Range</span>
         <a href="course-catalog.html">Classes</a>
-        <a href="about.html">FAQ</a>
+        <a href="about.html">More Info</a>
       </span>
     </h2>
   </nav>
@@ -32,7 +32,9 @@
   <main>
     <section class="more-info">
       <h3 id="facility">Facility:</h3>
-      <p>Straight to the Point Archery is an indoor training facility with 28 shooting (14 - 10 yard lanes and 14 – 20 yard lanes) and 2 private coaching rooms. We also have access to 26 additional 20 yard lanes and an outdoor shooting field. Our state of the art educational and training facility incorporates detailed technical video analysis combined with generations of archery experience from certified coaches and instructors. We offer several types of lessons to accommodate everyone from the first time archer to the professional archer. Once set up with proper fitting equipment, each archer will be given the basic safety instruction to start and will be introduced to various shooting techniques.</p>
+      <p>Straight to the Point Archery is an indoor training facility with 28 shooting (14 - 10 yard lanes and 14 – 20 yard lanes) and 2 private coaching rooms. We also have access to 26 additional 20 yard lanes and an outdoor shooting field. Our
+        state of the art educational and training facility incorporates detailed technical video analysis combined with generations of archery experience from certified coaches and instructors. We offer several types of lessons to accommodate
+        everyone from the first time archer to the professional archer. Once set up with proper fitting equipment, each archer will be given the basic safety instruction to start and will be introduced to various shooting techniques.</p>
       <h3 id="education">Education:</h3>
       <p>From Beginner to Elite, archers of all ages and ability learn about this exciting Olympic and international sport. Sign up for a group lesson, private class, schedule a birthday or corporate party or compete at one of our many tournaments.
         Straight to the Point Archery also offers homeschooling programs, kids club events, YMCA classes, Boy and Girl Scouts achievement programs and several other youth group activities. We are dedicated to teaching valuable life skills to the
@@ -54,13 +56,14 @@
       <p>Nathan is an USA Archery Certified Level 3 NTS – Coach and has been teaching archery since 2009. He has been interested in archery since he nocked his first arrow while a Boy Scout at Scout camp. Nathan has many years of experience teaching
         people of all ages, experience gained as a Martial Arts Instructor and Studio Manager.</p>
       <br>
-      <h3 id="about-us">About Us:</h3>
+      <h3 id="about-us">Our Story:</h3>
       <p>Straight to the Point Archery is a non profit archery education center founded in 2005 by Giap Nguyen. Our state of the art educational and training facility incorporates detailed technical video analysis combined with generations of archery
         experience from certified coaches and instructors.</p>
       <p>Giap Nguyen started Straight to the Point Archery in 2005. He's an avid and accomplished archer himself, having competed with the United States Archery Team in the 2000 Summer Olympics. He has three children, and started Straight to the
         Point in part because he was not satisfied with the archery eduction options for them in Tacoma. After The Hunger Games books and movies came out, he noticed a surge in popularity of archery among young people, especially young women, and the
         business has been booming ever since.</p>
     </section>
+    </main>
 
     <footer>
       <img src="images/footerimage.jpg" alt="">
@@ -73,11 +76,21 @@
         archery-education@example.com <br>
         (253)555-1010
       </address>
+      <nav>
+        <span>
+          <a href="about.html#about-us">Our Story</a>
+          <span>|</span>
+          <a href="course-catalog.html">Classes</a>
+          <span>|</span>
+          <a href="about.html">More Info</a>
+        </span>
+      </nav>
       <h6>Nondiscriminatory Policy:
         Next Step Archery admits students of any race, gender presentation, sexuality, religion, national origin or ethnic origin to all rights, privileges, programs and activities available to students at the school. We do not discriminate in
         administration of our educational policies, admission policies and other school administered programs. All students are welcome and valuable members of our community.
       </h6>
     </footer>
+
 </body>
 
 </html>
