--- a/course-catalog.html
+++ b/course-catalog.html
@@ -22,35 +22,86 @@
   <nav>
     <h2>
       <span>
-        <a href="#">Reserve a Range</a>
+        <span>Reserve a Range</span>
         <a href="course-catalog.html">Classes</a>
-        <a href="about.html">FAQ</a>
+        <a href="about.html">More Info</a>
       </span>
     </h2>
   </nav>
 
   <main>
-    <section>
-      <!--course catalogue-->
+    <section class="course-catalog">
+      <h2>Course Catalog:</h2>
+      <h3>A101 Basic Archery</h3>
+      <p>A101 is a basic archery course that focuses on beginning archery safety, skills, and drills. Participants learn about archery form, range rules and etiquette. Form training and fun games are introduced in this class.
+        Equipment will be provided with exception of safety kit.<br>
+        Cost: $120/month <br>
+        Schedule: Mondays and Wednesdays, 4-5pm </p>
+      <h4>Prerequisite:</h4>
+      <p> Interest in learning about the sport of archery. Minimum age 8 years old or 7 w/ pre-evaluation.</p>
+
+      <h3>A102 Intermediate Archery</h3>
+      <p>A102 is an intermediate archery course that focuses on intermediate archery safety, form, and introduces new equipment styles of shooting Recurve and Compound bows. Fun games and form reinforcement techniques are emphasized in this class.
+        Equipment will be provided with exception of safety kit.<br>
+        Cost: $120/month <br>
+        Schedule: Tuesdays and Thursdays, 4-5pm </p>
+      <h4>Prerequisite:</h4>
+      <p> A101 or recommendation from private lesson instructor. Minimum age 7 years old.</p>
+
+      <h3>A103 Advanced Archery</h3>
+      <p>After taking the A101, A102 classes, students are eligible to participate in the A103 class. This class focuses on a continued education towards tournament styles of shooting used by many archery tournament associations from around the
+        world. Along with the tournament lesson, participants receive continued knowledge around their shooting form and advice on personal equipment selections.Equipment will be provided with exception of safety kit.<br>
+        Cost: $120/month <br>
+        Schedule: Tuesdays and Thursdays, 5-6pm </p>
+      <h4>Prerequisite:</h4>
+      <p> A101/A102 or equivalent. Minimum age 7 years old.</p>
+    </section>
+
+    <section class="private-lessons">
+      <h2>Private Lessons:</h2>
+
+      <h3>Single Lesson</h3>
+      <p>Description: 1 hour of expert guidance by a USA Archery-certified coach</p>
+      <p>Price: $50</p>
+
+      <h3>3 Lesson Package</h3>
+      <p>Description: 3 lessons, 1 hour each of expert guidance by a USA Archery-certified coach
+      </p>
+      <p>Price: $140</p>
+
+      <h3>10 Lesson Package</h3>
+      <p>Description: 10 lessons, 1 hour each of expert guidance by a USA Archery-certified coach.</p>
+      <p>Price: $380</p>
     </section>
   </main>
-    <footer>
-      <img src="images/footerimage.jpg" alt="">
-      <!--footer image-->
-      <a href="index.html"><img src="images/archeryAcademy-logo-color.png" alt="#"></a>
-      <!--Logo placeholder-->
-      <address>
-        <a href="https://goo.gl/maps/4qa4EtFzZhPi6Co88">528 Nock Point Ln <br>
-          Tacoma, WA 98412</a> <br>
-        archery-education@example.com <br>
-        (253)555-1010
-      </address>
-      <h6>Nondiscriminatory Policy:
-        Next Step Archery admits students of any race, gender presentation, sexuality, religion, national origin or ethnic origin to all rights, privileges, programs and activities available to students at the school. We do not discriminate in
-        administration of our educational policies, admission policies and other school administered programs. All students are welcome and valuable members of our community.
-      </h6>
-    </footer>
+  <footer>
+    <img src="images/footerimage.jpg" alt="">
+    <!--footer image-->
+    <a href="index.html"><img src="images/archeryAcademy-logo-color.png" alt="#"></a>
+    <!--Logo placeholder-->
+    <address>
+      <a href="https://goo.gl/maps/4qa4EtFzZhPi6Co88">528 Nock Point Ln <br>
+        Tacoma, WA 98412</a> <br>
+      archery-education@example.com <br>
+      (253)555-1010
+    </address>
+    <nav>
+      <span>
+        <a href="about.html#about-us">Our Story</a>
+        <span>|</span>
+        <a href="course-catalog.html">Classes</a>
+        <span>|</span>
+        <a href="about.html">More Info</a>
+      </span>
+    </nav>
+    <h6>Nondiscriminatory Policy:
+      Next Step Archery admits students of any race, gender presentation, sexuality, religion, national origin or ethnic origin to all rights, privileges, programs and activities available to students at the school. We do not discriminate in
+      administration of our educational policies, admission policies and other school administered programs. All students are welcome and valuable members of our community.
+    </h6>
+  </footer>
 
-  </body>
 
-  </html>
+
+</body>
+
+</html>
