--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
   <nav>
     <h2>
       <span>
-        <a href="#">Reserve a Range</a>
+        <span>Reserve a Range</span>
         <a href="course-catalog.html">Classes</a>
-        <a href="about.html">FAQ</a>
+        <a href="about.html">More Info</a>
       </span>
     </h2>
   </nav>
@@ -35,7 +35,8 @@
         <h3>Current Class Schedule</h3>
         <iframe
           src="https://calendar.google.com/calendar/embed?height=400&amp;wkst=1&amp;bgcolor=%23ffffff&amp;ctz=America%2FLos_Angeles&amp;src=bjY0am9ocDJwMDJpOTdhNzdzNGE1dWlwaGdAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;color=%23039BE5&amp;showTitle=0&amp;showNav=0&amp;showDate=0&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;showTz=0&amp;mode=AGENDA"
-          style="border-width:0" width="300" height="400" frameborder="0" scrolling="no"></iframe>
+          style="border-width:0" width="300" height="400"></iframe>
+          <!--obsolete google calendar attributes: frameborder="0" scrolling="no"-->
         <!--<ul>
             <li>A101 Basic Archery <br>
               Mondays and Wednesdays, 4-5pm</li>
@@ -47,8 +48,7 @@
       </section>
       <section class="classes-resigtration">
         <h3>Resigtration is now OPEN!</h3>
-        <a href="#">Register Today!</a>
-        <!--link to course catalog-->
+        <a href="course-catalog.html">Register Today!</a><!--link to course catalog-->
       </section>
       <section class="classes-upcoming">
         <h3>Upcoming Classes</h3>
@@ -88,6 +88,15 @@
       archery-education@example.com <br>
       (253)555-1010
     </address>
+    <nav>
+      <span>
+        <a href="about.html#about-us">Our Story</a>
+        <span>|</span>
+        <a href="course-catalog.html">Classes</a>
+        <span>|</span>
+        <a href="about.html">More Info</a>
+      </span>
+    </nav>
     <h6>Nondiscriminatory Policy:
       Next Step Archery admits students of any race, gender presentation, sexuality, religion, national origin or ethnic origin to all rights, privileges, programs and activities available to students at the school. We do not discriminate in
       administration of our educational policies, admission policies and other school administered programs. All students are welcome and valuable members of our community.
